// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value to 0 1`] = `
Array [
  0,
  Object {},
]
`;

exports[`returns all props needed 1`] = `
Object {
  "prop1": "prop1",
  "prop2": "prop2",
}
`;

exports[`sets initial values 1`] = `
Array [
  23,
  Object {
    "value": 23,
  },
]
`;

exports[`sets initialValue from args 1`] = `
Array [
  false,
  Object {
    "value": 23,
  },
]
`;
